--- a/packages/LineChart/LineChart.stories.mdx
+++ b/packages/LineChart/LineChart.stories.mdx
@@ -58,7 +58,7 @@ The above colors can be specified as strings in hexadecimal, RGB, or HSL notatio
         components: { LineChart },
         template: `
           <div :style="divStyle">
-            <line-chart :title="title" :data="data" :customDatasetStyles="customDatasetStyles" :annotation="annotation" :scaleLimits="scaleLimits" :showLegend="showLegend" :dataFormat="dataFormat" :shortDesc="shortDesc" :longDesc="longDesc" />
+            <line-chart :title="title" :data="data" :axesTitles="axesTitles" :customDatasetStyles="customDatasetStyles" :annotation="annotation" :scaleLimits="scaleLimits" :showLegend="showLegend" :dataFormat="dataFormat" :shortDesc="shortDesc" :longDesc="longDesc" />
           </div>
         `,
         props: {
@@ -67,6 +67,9 @@ The above colors can be specified as strings in hexadecimal, RGB, or HSL notatio
           },
           data: {
             default: () => object('data', chartData)
+          },
+          axesTitles: {
+            default: () => object('axesTitles', { primary: "", secondary: "" })
           },
           customDatasetStyles: {
             default: () => object('customDatasetStyles', [])
@@ -115,6 +118,27 @@ The above colors can be specified as strings in hexadecimal, RGB, or HSL notatio
        props: {
         title: { default: () => 'Sample Chart' },
         data: { default: () => chartData },
+        axesTitles: { default: () => ({}) },
+        showLegend: { default: () => true },
+        dataFormat: { default: () => 'normal' }
+       }
+      }
+    }
+  </Story>
+</Preview>
+
+## With axes tiles
+
+<Preview>
+  <Story name="With axes titles">
+    {
+      {
+       components: { LineChart },
+       template: lineChartTemplate,
+       props: {
+        title: { default: () => 'Sample Chart' },
+        data: { default: () => chartData },
+        axesTitles: { default: () => ({ primary: 'primary axis title', secondary: 'secondary axis title' }) },
         showLegend: { default: () => true },
         dataFormat: { default: () => 'normal' }
        }
@@ -134,6 +158,7 @@ The above colors can be specified as strings in hexadecimal, RGB, or HSL notatio
        props: {
         title: { default: () => 'Multiple Datasets' },
         data: { default: () => multiChartData },
+        axesTitles: { default: () => ({}) },
         showLegend: { default: () => true },
         dataFormat: { default: () => 'normal' }
        }
@@ -157,6 +182,7 @@ The above colors can be specified as strings in hexadecimal, RGB, or HSL notatio
        props: {
         title: { default: () => 'Maximum possible datasets' },
         data: { default: () => maxChartData },
+        axesTitles: { default: () => ({}) },
         showLegend: { default: () => true },
         dataFormat: { default: () => 'normal' }
        }
@@ -220,6 +246,7 @@ The above colors can be specified as strings in hexadecimal, RGB, or HSL notatio
        props: {
         title: { default: () => undefined },
         data: { default: () => ({'data': 'invalid data'}) },
+        axesTitles: { default: () => ({}) },
         showLegend: { default: () => false },
         dataFormat: { default: () => 'normal' }
        }
