--- a/packages/ToggleList/ToggleList.stories.mdx
+++ b/packages/ToggleList/ToggleList.stories.mdx
@@ -69,7 +69,7 @@ import { MyvicToggleList } from '@dpc-sdp/myvic-toggle-list'
               {id: 'item2', title: 'Item 2', icon: 'instagram', color: 'danger'},
               {id: 'item3', title: 'Item 3', icon: 'home', color: 'success'},
               {id: 'item4', title: 'Item 4', icon: 'share_alternative', color: 'secondary'},
-              {id: 'item5', title: 'Item 5', icon: 'document', color: 'warning'},
+              {id: 'item5', title: 'Item 5', icon: 'document', color: '#a242cf', customColor: true},
             ])
           },
           selectedItems: {
@@ -78,7 +78,7 @@ import { MyvicToggleList } from '@dpc-sdp/myvic-toggle-list'
               'item2': false,
               'item3': false,
               'item4': true,
-              'item5': false
+              'item5': true
             })
           }
         },
