added new prop to AreaSearch, new story and updated tests

--- a/packages/AreaSearch/AreaSearch.stories.mdx
+++ b/packages/AreaSearch/AreaSearch.stories.mdx
@@ -41,6 +41,27 @@ import { AreaSearch } from '@dpc-sdp/myvic-areasearch'
         components: { AreaSearch },
         template: areaSearchTemplate,
         props: {
+          noLgaOrRegion: {
+            default: () => false
+          }
+        }
+      }
+    }
+  </Story>
+</Preview>
+
+## Suburb/postcode only
+
+<Preview>
+  <Story name="Suburb/postcode only">
+    {
+      {
+        components: { AreaSearch },
+        template: areaSearchTemplate,
+        props: {
+          noLgaOrRegion: {
+            default: () => true
+          }
         }
       }
     }
