--- a/packages/map-core/Map.stories.mdx
+++ b/packages/map-core/Map.stories.mdx
@@ -477,6 +477,7 @@ The ```position``` property of the ```popupProps``` prop is set to ```float-left
             :popupProps="popupProps"
             :enableSelectInteraction="true"
             :selectedFeatureStyle="selectedStyleFunction"
+            @select="onSelect"
           >
             <myvic-map-tile-layer
               type="WMS"
@@ -519,6 +520,9 @@ The ```position``` property of the ```popupProps``` prop is set to ```float-left
           },
           selectedStyleFunction: function (feature) {
             return this.pointStyles[feature.get('pinType')].selectedLarge
+          },
+          onSelect: function (features) {
+            this.center = features.getArray()[0].get('geometry').flatCoordinates
           },
           generatePopupContent: function (features) {
             return {
