--- a/packages/map-core/Map.stories.mdx
+++ b/packages/map-core/Map.stories.mdx
@@ -1,5 +1,5 @@
 import { Meta, Preview, Story, Props, Source, Description } from '@storybook/addon-docs/blocks';
-import { withKnobs, object, number, boolean, text } from '@storybook/addon-knobs'
+import { withKnobs, object, number, boolean, text, select } from '@storybook/addon-knobs'
 import { RplContainer, RplRow, RplCol } from '@dpc-sdp/ripple-grid'
 import { MyvicDataBlock as DataBlock } from '@dpc-sdp/myvic-data-block'
 import {
@@ -74,6 +74,7 @@ This example shows how to create an interactive map that fills it's parent conta
           :minZoom="minZoom"
           :maxZoom="maxZoom"
           :enableZoomControl="enableZoomControl"
+          :zoomControlPosition="zoomControlPosition"
           :enableAttributionControl="enableAttributionControl"
           :enableFullScreenControl="enableFullScreenControl"
           :enablePanInteraction="enablePanInteraction"
@@ -134,6 +135,9 @@ This example shows how to create an interactive map that fills it's parent conta
           },
           enableZoomControl: {
             default: boolean('Enable Zoom Control', true)
+          },
+          zoomControlPosition: {
+            default: select('Zoom Control Position', { default: 'default', 'top-right': 'top-right'})
           },
           enableAttributionControl: {
             default: boolean('Enable Attribution Control', true)
@@ -462,7 +466,8 @@ using the ```v-slot:popup``` named slot.
 
 ## Popups floating left
 
-The ```position``` property of the ```popupProps``` prop is set to ```float-left``` here.
+The ```position``` property of the ```popupProps``` prop is set to ```float-left``` here. The zoom control is placed
+top-right to avoid hiding it with the popup.
 
 <Preview>
   <Story name="Popups floating left">
@@ -473,6 +478,7 @@ The ```position``` property of the ```popupProps``` prop is set to ```float-left
           <myvic-map-core
             :containerStyle="containerStyle"
             :center="center"
+            zoomControlPosition="top-right"
             :popupContentFunction="generatePopupContent"
             :popupProps="popupProps"
             :enableSelectInteraction="true"
@@ -520,6 +526,82 @@ The ```position``` property of the ```popupProps``` prop is set to ```float-left
           },
           selectedStyleFunction: function (feature) {
             return this.pointStyles[feature.get('pinType')].selectedLarge
+          },
+          onSelect: function (features) {
+            this.center = features.getArray()[0].get('geometry').flatCoordinates
+          },
+          generatePopupContent: function (features) {
+            return {
+              title: features[0].get('name'),
+              value: features[0].get('pinType')
+            }
+          }
+        }
+      }
+    }
+  </Story>
+</Preview>
+
+## Popups below map pins
+
+The ```position``` property of the ```popupProps``` prop is set to ```below-feature``` here.
+
+<Preview>
+  <Story name="Popups below map pins">
+    {
+      {
+        components: { MyvicMapCore, MyvicMapTileLayer, MyvicMapVectorLayer },
+        template: `
+          <myvic-map-core
+            :containerStyle="containerStyle"
+            :center="center"
+            :popupContentFunction="generatePopupContent"
+            :popupProps="popupProps"
+            :enableSelectInteraction="true"
+            :selectedFeatureStyle="selectedStyleFunction"
+            @select="onSelect"
+          >
+            <myvic-map-tile-layer
+              type="WMS"
+              url="https://base.maps.vic.gov.au/service"
+              :params="{'LAYERS': 'CARTO_WM', 'TILED': true}"
+              :tileSize="[512, 512]"
+              :highDPI="false"
+            />
+            <myvic-map-vector-layer
+              :features="features"
+              dataFormat="GeoJSON"
+              loadingStrategy="bbox"
+              :layerStyle="getPointStyle"
+              :enablePopup="true"
+              :zoomToExtent="zoomToExtent"
+            />
+          </myvic-map-core>
+        `,
+        data: () => {
+          return {
+            containerStyle: { position: 'relative', width: '100%', height:'100vh' },
+            center: [16138405.843820328, -4552817.013522999],
+            zoomToExtent: true,
+            features: [],
+            pointStyles: {
+              pedestrian: styles.createStylesFromIcon('pedestrian', '#0052c2'),
+              car: styles.createStylesFromIcon('car', '#023b89'),
+              exclamation: styles.createStylesFromIcon('exclamation', '#ca4c21')
+            },
+            popupProps: { stickyHeader: true, position: 'below-feature' }
+          }
+        },
+        async mounted () {
+          this.features = new ol.format.GeoJSON().readFeatures(samplePoints, { featureProjection: 'EPSG:3857' })
+          window.setTimeout(() => { this.zoomToExtent = false }, 500)
+        },
+        methods: {
+          getPointStyle: function (feature) {
+            return this.pointStyles[feature.get('pinType')].normal
+          },
+          selectedStyleFunction: function (feature) {
+            return this.pointStyles[feature.get('pinType')].selectedMedium
           },
           onSelect: function (features) {
             this.center = features.getArray()[0].get('geometry').flatCoordinates
