--- a/packages/map-core/MapVectorLayer.stories.mdx
+++ b/packages/map-core/MapVectorLayer.stories.mdx
@@ -268,6 +268,7 @@ This example showcases clusters that break up when interacted with
           :zoom="14"
           :baseMapUrl="baseMapUrl"
           :popupContentFunction="generatePopupContent"
+          :zoomToClusterOnClick="true"
         >
           <myvic-map-vector-layer
             :urlFunction="buildUrl"
