--- a/packages/map-core/MapVectorLayer.stories.mdx
+++ b/packages/map-core/MapVectorLayer.stories.mdx
@@ -11,6 +11,8 @@ import {
   Circle,
   EsriJSON
 } from './index.js'
+import ol from './lib/ol'
+import styles from './styles/styles'
 
 <Meta title="Maps/Vector Layer" component={ MyvicMapVectorLayer } decorators={ [withKnobs] } />
 
@@ -237,6 +239,69 @@ This example showcases client-side clustering with a GeoJSON file loaded from a 
         methods: {
           buildUrl: function (extent, resolution, projection) {
             return `https://gis-app-cdn.prod.myvictoria.vic.gov.au/geoserver/wfs?service=WFS&version=1.1.0&request=GetFeature&typename=myvic:public_wifi&outputFormat=application/json&srsname=EPSG:3857&bbox=${extent.join()},EPSG:3857`
+          },
+          generatePopupContent: function (features) {
+            const feature = features[0]
+            const clusteredFeatures = feature.get('features')
+            return {
+              title: `${clusteredFeatures.length} feature(s) found in this area`
+            }
+          }
+        }
+      }
+    }
+  </Story>
+</Preview>
+
+## Alternative Cluster Style and Behaviour
+
+This example showcases clusters that break up when interacted with
+
+<Preview>
+  <Story name="Alternative cluster style and behaviour">
+    {
+      {
+        components: { MyvicMapCore, MyvicMapVectorLayer },
+        template: `<myvic-map-core
+          :containerStyle="containerStyle"
+          :center="center"
+          :zoom="14"
+          :baseMapUrl="baseMapUrl"
+          :popupContentFunction="generatePopupContent"
+          :zoomToClusterOnClick="true"
+        >
+          <myvic-map-vector-layer
+            :urlFunction="buildUrl"
+            dataFormat="GeoJSON"
+            loadingStrategy="bbox"
+            :layerStyle="getLayerStyle"
+            :clustering="true"
+            :clusterPointStyle="clusterPointStyle"
+            :enablePopup="true"
+          />
+        </myvic-map-core>`,
+        data: () => {
+          return {
+            containerStyle: { position: 'relative', width: '100%', height:'100vh' },
+            center: [16136905.843820328, -4553057.013522999],
+            pointStyles: {
+              car: styles.createStylesFromIcon('car', '#023b89')
+            },
+            baseMapUrl: 'https://api.mapbox.com/styles/v1/myvictoira/cjio5h4do0g412smmef4qpsq5/tiles/256/{z}/{x}/{y}?access_token=pk.eyJ1IjoibXl2aWN0b2lyYSIsImEiOiJjamlvMDgxbnIwNGwwM2t0OWh3ZDJhMGo5In0.w_xKPPd39cwrS1F4_yy39g',
+          }
+        },
+        methods: {
+          buildUrl: function (extent, resolution, projection) {
+            return `https://gis-app-cdn.prod.myvictoria.vic.gov.au/geoserver/wfs?service=WFS&version=1.1.0&request=GetFeature&typename=myvic:public_wifi&outputFormat=application/json&srsname=EPSG:3857&bbox=${extent.join()},EPSG:3857`
+          },
+          getLayerStyle: function (feature) {
+            return this.pointStyles['car'].normal
+          },
+          clusterPointStyle: function (features) {
+            return [ol.createImageIconStyle(
+              styles.filledCluster(features),
+              'anonymous'
+            )]
           },
           generatePopupContent: function (features) {
             const feature = features[0]
